--- a/class-notes/s02/package.json
+++ b/class-notes/s02/package.json
@@ -8,8 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "typescript": "^5.6.2"
-  }
+  },
+  "description": ""
 }
